# kafka-study

src/: consumer.py  producer.py  pyproject.toml
